1.新增今日汇总 2.支持多宝切换 3.喂养睡眠计时 4.新增成长相册 5.扩展疫苗计划
